--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-Hello World
+<!doctype html>
+
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+
+  <title>Agency of</title>
+  <meta name="description" content="A digital product agency">
+  <meta name="author" content="Agency of inc.">
+  
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="stylesheet" href="stylesheet.css">
+
+</head>
+
+<body>
+    <h1>Agency of</h1>
+    <br />
+    <h4>A digital product agency working with <br />founders and creators to achieve their vision.</h4>
+    <br />
+    <p>+1 (650) 636-7534</p>
+    <p>hi@of.agency</p>
+</body>
+</html>
