--- a/blocklevel/index.htm
+++ b/blocklevel/index.htm
@@ -189,7 +189,7 @@
 <h2>“Leveraging technology to win ballot measures”<br>
 <small>Development, UX</small></h2></b></div>
 	<div grid-col="x11" grid-pad="2" class="gifimg"><img width="3000" height="2000" width_o="3000" height_o="2000" data-src="https://freight.cargo.site/t/original/i/af9c016783eb03373b910232fccb11c09f6cb005dd1386c9aa26ace7928c026e/0.jpg" data-mid="30649591" border="0" class="image-zoom" src="index_files/0.jpg" style="width: 757.698px; height: 505.132px;"><br>
-<br>It was the last week of the election. After many successful canvasing and lit drop events we were gearing up for the biggest mobilization anyone had ever seen. 50,000 pieces of literature would be dropped with 200+ volunteers from every progressive political group showing up to Dolores park.<br><br>How were we going to pull this off? In this last week I created a web based software that generated the maps for our volunteers using Mapbox, available election data, and census data for filtering out low density blocks.<br><br>
+<br>It was the last week of the election. After many successful canvasing and lit drop events we were gearing up for the biggest mobilization anyone had ever seen. 50,000 pieces of literature would be dropped with 200+ volunteers from every progressive political group showing up to Dolores park.<br><br>How were we going to pull this off? I created a web based software that generated the maps for our volunteers using Mapbox, available election data, and census data for filtering out low density blocks.<br><br>
 <small style="font-size: .6em">Scroll to view</small></div>
 </div><br><br>
 <br><br>
