attempting to fix vertical scroll on desktop

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Jul 25 2019 22:36:38 GMT+0000 (UTC)  -->
+<!--  Last Published: Thu Jul 25 2019 22:59:26 GMT+0000 (UTC)  -->
 <html data-wf-page="5d2ce53299a69008e93af0ac" data-wf-site="5d2ce53299a69083833af0ab">
 <head>
   <meta charset="utf-8">
@@ -44,27 +44,25 @@ border-color: black;
   <div class="full-container multidisciplinary w-container">
     <h2 class="tagline">We&#x27;re a multidisciplinary agency of experts <br>who create cohesive experiences across brand and product.</h2>
   </div>
-  <div class="section-6">
-    <div class="full-container w-container"><img src="images/chart5.png" srcset="images/chart5.png 500w, images/chart5.png 800w, images/chart5.png 1080w, images/chart5.png 1600w, images/chart5.png 2000w, images/chart5.png 2600w, images/chart5.png 2880w" sizes="(max-width: 991px) 100vw, 1440px" alt="" class="image-8">
-      <div class="div-block-13">
-        <h1 class="heading-2">Our Approach</h1>
-        <div class="text-block">Working through sprints, we tackle any combination of product, branding or hardware &amp; software development projects rapidly and in tandem.</div>
-        <div class="columns w-row">
-          <div class="w-col w-col-4">
-            <h1 class="heading-3">Discover</h1>
-            <div class="text-block-2">Research <br>Strategy<br>Positioning</div>
-          </div>
-          <div class="w-col w-col-4">
-            <h1 class="heading-3">Create</h1>
-            <div class="text-block-2">Design<br>Development<br>Branding</div>
-          </div>
-          <div class="w-col w-col-4">
-            <h1 class="heading-3">Express</h1>
-            <div class="text-block-2 last">Marketing<br>Web Design<br>Communications</div>
-          </div>
+  <div class="full-container w-container"><img src="images/chart6.png" width="982" srcset="images/chart6.png 500w, images/chart6.png 800w, images/chart6.png 1080w, images/chart6.png 1600w, images/chart6.png 1964w" sizes="(max-width: 991px) 100vw, 992px" alt="" class="image-8">
+    <div class="div-block-13">
+      <h1 class="heading-2">Our Approach</h1>
+      <div class="text-block">Working through sprints, we tackle any combination of product, branding or hardware &amp; software development projects rapidly and in tandem.</div>
+      <div class="columns w-row">
+        <div class="w-col w-col-4">
+          <h1 class="heading-3">Discover</h1>
+          <div class="text-block-2">Research <br>Strategy<br>Positioning</div>
         </div>
-        <div class="lets-talk"><a href="#form" class="button w-button">Let&#x27;s Talk</a></div>
+        <div class="w-col w-col-4">
+          <h1 class="heading-3">Create</h1>
+          <div class="text-block-2">Design<br>Development<br>Branding</div>
+        </div>
+        <div class="w-col w-col-4">
+          <h1 class="heading-3">Express</h1>
+          <div class="text-block-2 last">Marketing<br>Web Design<br>Communications</div>
+        </div>
       </div>
+      <div class="lets-talk"><a href="#form" class="button w-button">Let&#x27;s Talk</a></div>
     </div>
   </div>
   <div class="section-5">
@@ -109,11 +107,9 @@ border-color: black;
     </div>
   </div>
   <div class="section-4">
-    <div class="full-container w-container">
-      <h1 class="heading-2 team">The Team</h1>
-      <div class="div-block-15">
-        <div class="div-block-4"><img src="images/sam.png" width="211" alt="" class="image-4"><img src="images/angelica.png" width="211" alt="" class="image-3"><img src="images/jeremy.png" width="211" alt="" class="image-5"><img src="images/ricky.png" width="211" alt="" class="image-6"><img src="images/chris.png" width="211" alt="" class="image-7"></div>
-      </div>
+    <h1 class="heading-2 team">The Team</h1>
+    <div class="div-block-15">
+      <div class="div-block-4"><img src="images/sam.png" width="211" alt="" class="image-4"><img src="images/angelica.png" width="211" alt="" class="image-3"><img src="images/jeremy.png" width="211" alt="" class="image-5"><img src="images/ricky.png" width="211" alt="" class="image-6"><img src="images/chris.png" width="211" alt="" class="image-7"></div>
     </div>
   </div>
   <div class="section-3">
