--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Jul 25 2019 23:01:56 GMT+0000 (UTC)  -->
+<!--  Last Published: Thu Jul 25 2019 23:03:41 GMT+0000 (UTC)  -->
 <html data-wf-page="5d2ce53299a69008e93af0ac" data-wf-site="5d2ce53299a69083833af0ab">
 <head>
   <meta charset="utf-8">
@@ -44,7 +44,7 @@ border-color: black;
   <div class="full-container multidisciplinary w-container">
     <h2 class="tagline">We&#x27;re a multidisciplinary agency of experts <br>who create cohesive experiences across brand and product.</h2>
   </div>
-  <div class="full-container w-container"><img src="images/chart6.png" width="982" srcset="images/chart6.png 500w, images/chart6.png 800w, images/chart6.png 1080w, images/chart6.png 1600w, images/chart6.png 1964w" sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px" alt="" class="image-8">
+  <div class="full-container w-container"><img src="images/chart6.png" width="982" srcset="images/chart6.png 500w, images/chart6.png 800w, images/chart6.png 1080w, images/chart6.png 1600w, images/chart6.png 1964w" sizes="(max-width: 991px) 100vw, 992px" alt="" class="image-8">
     <div class="div-block-13">
       <h1 class="heading-2">Our Approach</h1>
       <div class="text-block">Working through sprints, we tackle any combination of product, branding or hardware &amp; software development projects rapidly and in tandem.</div>
