copy fixes. adding in formspree '
'

--- a/work.html
+++ b/work.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Jul 25 2019 23:03:41 GMT+0000 (UTC)  -->
+<!--  Last Published: Fri Jul 26 2019 19:47:03 GMT+0000 (UTC)  -->
 <html data-wf-page="5d39c0a63956d25c53319b50" data-wf-site="5d2ce53299a69083833af0ab">
 <head>
   <meta charset="utf-8">
@@ -40,31 +40,33 @@ border-color: black;
     </div>
   </div>
   <div class="div-block-14"></div>
-  <div class="full-container multidisciplinary w-container">
-    <div class="w-layout-grid grid-2">
-      <div>
-        <div class="div-block-9"><img src="images/matchabar.svg" alt="" class="image-11"></div>
-        <p class="paragraph">We developed an honest, culturally aware voice MatchaBar’s grocery product, taking irreverent aim at everything from diet fads to crypto. We carried this new voice into <a href="https://www.youtube.com/watch?v=_gA20qskGUM" target="_blank" class="link-5">a digital video</a> and the ‘Gift the Hustle’ social campaign.</p>
-      </div>
-      <div>
-        <div class="div-block-9"><img src="images/riviera.svg" alt="" class="image-11"></div>
-        <p class="paragraph">Riviera approached us ahead of a growth equity round. We reimagined the Sutro app design, building it into a world class recruiting platform that combines workflow automation and AI to empower recruiters and provide transparency for candidates.</p>
-      </div>
-      <div>
-        <div class="div-block-9"><img src="images/rocean.png" width="130" alt="" class="image-11"></div>
-        <p class="paragraph">We developed early prototypes and are currently working with the team to launch <a href="https://thespoon.tech/rocean-raises-6m-for-its-countertop-carbonated-water-dispenser/" target="_blank" class="link-6">the first version of rOcean</a> - a single device that filters, flavors and carbonates water directly from your tap to create all of your favorite drinks.</p>
-      </div>
-      <div>
-        <div class="div-block-9"><img src="images/bloomberg.svg" alt="" class="image-11"></div>
-        <p class="paragraph">We worked with Bloomberg to help build out their cloud deployment and developer toolchain, applying insights from extensive experience in cloud-based computing to support their enterprise-scale workflows.</p>
-      </div>
-      <div>
-        <div class="div-block-9"><img src="images/abinbev.svg" alt="" class="image-11"></div>
-        <p class="paragraph">We collaborated with ZX Ventures, Ab Inbev’s in-house innovation lab, to develop brand voice and positioning for the <a href="https://www.thelondoneconomic.com/food-drink/beer-of-the-week-golden-era/25/07/" class="link-7">UK launch of Golden Era</a>, a gluten-free beer inspired by the world’s oldest beer recipes and brewing methods.</p>
-      </div>
-      <div>
-        <div class="div-block-9"><img src="images/complex.svg" alt="" class="image-11"></div>
-        <p class="paragraph">Working with Complex&#x27;s Ad Partners, we created and launched various interactive experiences such as McDonalds Flavorbattle as well as various experimental ad experiences for clients like Nike, Sony, Miller lite.</p>
+  <div>
+    <div class="full-container multidisciplinary w-container">
+      <div class="w-layout-grid grid-2">
+        <div>
+          <div class="div-block-9"><img src="images/matchabar.svg" alt="" class="image-11"></div>
+          <p class="paragraph">We developed an honest, culturally aware voice for MatchaBar’s grocery product, taking irreverent aim at everything from diet fads to crypto. We carried this new voice into <a href="https://www.youtube.com/watch?v=_gA20qskGUM" target="_blank" class="link-5">a digital video</a> and the ‘Gift the Hustle’ social campaign.</p>
+        </div>
+        <div>
+          <div class="div-block-9"><img src="images/riviera.svg" alt="" class="image-11"></div>
+          <p class="paragraph">Riviera approached us ahead of a growth equity round. We reimagined the Sutro app design, building it into a world class recruiting platform that combines workflow automation and AI to empower recruiters and provide transparency for candidates.</p>
+        </div>
+        <div>
+          <div class="div-block-9"><img src="images/rocean.png" width="130" alt="" class="image-11"></div>
+          <p class="paragraph">We developed early prototypes and are currently working with the team to launch <a href="https://thespoon.tech/rocean-raises-6m-for-its-countertop-carbonated-water-dispenser/" target="_blank" class="link-6">the first version of rOcean</a> - a single device that filters, flavors and carbonates water directly from your tap to create all of your favorite drinks.</p>
+        </div>
+        <div>
+          <div class="div-block-9"><img src="images/bloomberg.svg" alt="" class="image-11"></div>
+          <p class="paragraph">We worked with Bloomberg to help build out their cloud deployment and developer toolchain, applying insights from extensive experience in cloud-based computing to support their enterprise-scale workflows.</p>
+        </div>
+        <div>
+          <div class="div-block-9"><img src="images/abinbev.svg" alt="" class="image-11"></div>
+          <p class="paragraph">We collaborated with ZX Ventures, Ab Inbev’s in-house innovation lab, to develop brand voice and positioning for the <a href="https://www.thelondoneconomic.com/food-drink/beer-of-the-week-golden-era/25/07/" class="link-7">UK launch of Golden Era</a>, a gluten-free beer inspired by the world’s oldest beer recipes and brewing methods.</p>
+        </div>
+        <div>
+          <div class="div-block-9"><img src="images/complex.svg" alt="" class="image-11"></div>
+          <p class="paragraph">Working with Complex&#x27;s Ad Partners, we created and launched various interactive experiences such as McDonalds Flavorbattle as well as various experimental ad experiences for clients like Nike, Sony, Miller lite.</p>
+        </div>
       </div>
     </div>
   </div>
