--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Jul 25 2019 23:03:41 GMT+0000 (UTC)  -->
+<!--  Last Published: Fri Jul 26 2019 19:47:03 GMT+0000 (UTC)  -->
 <html data-wf-page="5d2ce53299a69008e93af0ac" data-wf-site="5d2ce53299a69083833af0ab">
 <head>
   <meta charset="utf-8">
@@ -44,7 +44,7 @@ border-color: black;
   <div class="full-container multidisciplinary w-container">
     <h2 class="tagline">We&#x27;re a multidisciplinary agency of experts <br>who create cohesive experiences across brand and product.</h2>
   </div>
-  <div class="full-container w-container"><img src="images/chart6.png" width="982" srcset="images/chart6.png 500w, images/chart6.png 800w, images/chart6.png 1080w, images/chart6.png 1600w, images/chart6.png 1964w" sizes="(max-width: 991px) 100vw, 992px" alt="" class="image-8">
+  <div class="full-container w-container"><img src="images/chart6.png" width="982" srcset="images/chart6-p-500.png 500w, images/chart6-p-800.png 800w, images/chart6-p-1080.png 1080w, images/chart6-p-1600.png 1600w, images/chart6.png 1964w" sizes="(max-width: 991px) 100vw, 992px" alt="" class="image-8">
     <div class="div-block-13">
       <h1 class="heading-2">Our Approach</h1>
       <div class="text-block">Working through sprints, we tackle any combination of product, branding or hardware &amp; software development projects rapidly and in tandem.</div>
@@ -74,7 +74,7 @@ border-color: black;
             <div class="div-block-2"><img src="images/graham.png" width="47.5" alt="">
               <div class="div-block-3">
                 <div class="text-block-3">Graham Fortgang</div>
-                <div>Founder of Matchabar</div>
+                <div>Co-Founder and CEO, Matchabar</div>
               </div>
             </div>
           </div>
@@ -117,7 +117,7 @@ border-color: black;
       <div class="form">
         <h1 class="heading-5">Let&#x27;s do things together.</h1>
         <div class="form-block w-form">
-          <form id="email-form" name="email-form" data-name="Email Form"><input type="text" class="text-field w-input" maxlength="256" name="name-2" data-name="Name 2" placeholder="Your Name" id="name-2" required=""><input type="email" class="text-field w-input" maxlength="256" name="email-2" data-name="Email 2" placeholder="Your Email" id="email-2" required=""><textarea placeholder="Project Description" maxlength="5000" id="Description-2" name="Description-2" data-name="Description 2" required="" class="text-field grow w-input"></textarea>
+          <form id="email-form" name="email-form" data-name="Email Form" action="https://formspree.io/hi@of.agency"><input type="text" class="text-field w-input" maxlength="256" name="name" data-name="name" placeholder="Your Name" id="name-2" required=""><input type="email" class="text-field w-input" maxlength="256" name="replyto" data-name="_replyto" placeholder="Your Email" id="email" required=""><textarea placeholder="Project Description" maxlength="5000" id="description-2" name="description" data-name="description" required="" class="text-field grow w-input"></textarea>
             <div class="div-block-5"><input type="submit" value="Send" data-wait="Please wait..." class="submit-button w-button"></div>
           </form>
           <div class="w-form-done">
@@ -134,7 +134,7 @@ border-color: black;
     <div class="container w-container">
       <div class="w-row">
         <div class="column w-col w-col-2">
-          <div class="text-block-5">In The News</div>
+          <div class="text-block-5">Latest News</div>
         </div>
         <div class="w-col w-col-10">
           <div class="text-block-5"><a href="#" class="link">Riviera Partners Raises $25 Million in Growth Capital ➚<br></a><a href="#" class="link-8">MatchaBar makes a splash in beverage market, closes star-studded funding round with $8 million ➚</a></div>
