--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Jul 26 2019 19:47:03 GMT+0000 (UTC)  -->
+<!--  Last Published: Fri Jul 26 2019 19:53:00 GMT+0000 (UTC)  -->
 <html data-wf-page="5d3a22206e9b23b80805dfbf" data-wf-site="5d2ce53299a69083833af0ab">
 <head>
   <meta charset="utf-8">
@@ -46,7 +46,7 @@ border-color: black;
       <div class="form">
         <h1 class="heading-5">Let&#x27;s do things together.</h1>
         <div class="form-block w-form">
-          <form id="email-form" name="email-form" data-name="Email Form" action="https://formspree.io/hi@of.agency"><input type="text" class="text-field w-input" maxlength="256" name="name" data-name="name" placeholder="Your Name" id="name-2" required=""><input type="email" class="text-field w-input" maxlength="256" name="replyto" data-name="_replyto" placeholder="Your Email" id="email" required=""><textarea placeholder="Project Description" maxlength="5000" id="description-2" name="description" data-name="description" required="" class="text-field grow w-input"></textarea>
+          <form id="email-form" name="email-form" data-name="Email Form" action="https://formspree.io/hi@of.agency" method="post"><input type="text" class="text-field w-input" maxlength="256" name="name" data-name="name" placeholder="Your Name" id="name-2" required=""><input type="email" class="text-field w-input" maxlength="256" name="replyto" data-name="_replyto" placeholder="Your Email" id="email" required=""><textarea placeholder="Project Description" maxlength="5000" id="description-2" name="description" data-name="description" required="" class="text-field grow w-input"></textarea>
             <div class="div-block-5"><input type="submit" value="Send" data-wait="Please wait..." class="submit-button w-button"></div>
           </form>
           <div class="w-form-done">
