--- a/401.html
+++ b/401.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Jul 26 2019 21:02:19 GMT+0000 (UTC)  -->
+<!--  Last Published: Sat Jul 27 2019 19:39:20 GMT+0000 (UTC)  -->
 <html data-wf-page="5d3949967546597d0607b2de" data-wf-site="5d2ce53299a69083833af0ab">
 <head>
   <meta charset="utf-8">
@@ -13,8 +13,8 @@
   <link href="css/agency-of-inc.webflow.css" rel="stylesheet" type="text/css">
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="https://daks2k3a4ib2z.cloudfront.net/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
-  <link href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png" rel="apple-touch-icon">
+  <link href="images/fav.png" rel="shortcut icon" type="image/x-icon">
+  <link href="images/Frame5.png" rel="apple-touch-icon">
   <style> .w-slider-dot { background: teal; } .w-slider-dot.w-active { background: aqua; } </style>
 </head>
 <body>
