--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Jul 26 2019 21:02:19 GMT+0000 (UTC)  -->
+<!--  Last Published: Sat Jul 27 2019 19:39:20 GMT+0000 (UTC)  -->
 <html data-wf-page="5d2ce53299a69008e93af0ac" data-wf-site="5d2ce53299a69083833af0ab">
 <head>
   <meta charset="utf-8">
@@ -12,8 +12,8 @@
   <link href="css/agency-of-inc.webflow.css" rel="stylesheet" type="text/css">
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="https://daks2k3a4ib2z.cloudfront.net/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
-  <link href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png" rel="apple-touch-icon">
+  <link href="images/fav.png" rel="shortcut icon" type="image/x-icon">
+  <link href="images/Frame5.png" rel="apple-touch-icon">
   <style> 
 .w-slider-dot { background: #EFEFEF; } 
 .w-slider-dot.w-active { background: black; } 
@@ -117,7 +117,7 @@ border-color: black;
       <div class="form">
         <h1 class="heading-5">Let&#x27;s do things together.</h1>
         <div class="form-block w-form">
-          <form id="email-form" name="email-form" data-name="Email Form" action="https://send.pageclip.co/TeSyRHN7DxsPP6sTV5SON76Tmq2tZ5U3" method="post"><input type="text" class="text-field w-input" maxlength="256" name="name" data-name="name" placeholder="Your Name" id="name" required=""><input type="email" class="text-field w-input" maxlength="256" name="email" data-name="email" placeholder="Your Email" id="email-2" required=""><textarea placeholder="Project Description" maxlength="5000" id="description-2" name="description" data-name="description" required="" class="text-field grow w-input"></textarea>
+          <form id="email-form" name="email-form" data-name="Email Form" method="post" action="https://send.pageclip.co/TeSyRHN7DxsPP6sTV5SON76Tmq2tZ5U3"><input type="text" class="text-field w-input" maxlength="256" name="name" data-name="name" placeholder="Your Name" id="name" required=""><input type="email" class="text-field w-input" maxlength="256" name="email" data-name="email" placeholder="Your Email" id="email-2" required=""><textarea placeholder="Project Description" maxlength="5000" id="description-2" name="description" data-name="description" required="" class="text-field grow w-input"></textarea>
             <div class="div-block-5"><input type="submit" value="Send" data-wait="Please wait..." class="submit-button w-button"></div>
           </form>
           <div class="w-form-done">
