applied todo fixes

--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sat Jul 27 2019 19:39:20 GMT+0000 (UTC)  -->
+<!--  Last Published: Wed Jul 31 2019 19:19:53 GMT+0000 (UTC)  -->
 <html data-wf-page="5d3a22206e9b23b80805dfbf" data-wf-site="5d2ce53299a69083833af0ab">
 <head>
   <meta charset="utf-8">
@@ -32,6 +32,7 @@ border-color: black;
     <div data-w-id="86b60b00-aa70-0070-671e-ef5b788155d1" class="menu-button w-nav-button">
       <div class="top-line"></div>
       <div class="bottom-line"></div>
+      <div class="div-block-19"></div>
     </div>
   </div>
   <div class="section-2">
