--- a/work.html
+++ b/work.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sat Jul 27 2019 19:39:20 GMT+0000 (UTC)  -->
+<!--  Last Published: Wed Jul 31 2019 19:19:53 GMT+0000 (UTC)  -->
 <html data-wf-page="5d39c0a63956d25c53319b50" data-wf-site="5d2ce53299a69083833af0ab">
 <head>
   <meta charset="utf-8">
@@ -24,6 +24,12 @@ border-color: black;
 }
 .w-nav-overlay { display: none !important; }
 .section-2 { display: none}
+@media (max-width: 479px) {
+.mobilescroll {
+overflow-x: scroll;
+overflow-y: hidden;
+}
+}
 </style>
 </head>
 <body data-scroll-time="0" class="body">
@@ -31,6 +37,7 @@ border-color: black;
     <div data-w-id="86b60b00-aa70-0070-671e-ef5b788155d1" class="menu-button w-nav-button">
       <div class="top-line"></div>
       <div class="bottom-line"></div>
+      <div class="div-block-18"></div>
     </div>
   </div>
   <div class="section-2">
@@ -40,7 +47,7 @@ border-color: black;
     </div>
   </div>
   <div class="div-block-14"></div>
-  <div>
+  <div class="section-6">
     <div class="full-container multidisciplinary w-container">
       <div class="w-layout-grid grid-2">
         <div>
