applied todo fixes

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Jul 31 2019 20:24:09 GMT+0000 (UTC)  -->
+<!--  Last Published: Wed Jul 31 2019 21:50:06 GMT+0000 (UTC)  -->
 <html data-wf-page="5d2ce53299a69008e93af0ac" data-wf-site="5d2ce53299a69083833af0ab">
 <head>
   <meta charset="utf-8">
@@ -51,7 +51,7 @@ overflow-y: hidden;
   <div class="full-container multidisciplinary w-container">
     <h2 class="tagline">We&#x27;re a multidisciplinary agency of experts <br>who create cohesive experiences across brand and product.</h2>
   </div>
-  <div class="full-container w-container"><img src="images/chart6.png" width="982" srcset="images/chart6-p-500.png 500w, images/chart6-p-800.png 800w, images/chart6-p-1080.png 1080w, images/chart6-p-1600.png 1600w, images/chart6.png 1964w" sizes="(max-width: 479px) 85vw, (max-width: 991px) 100vw, 992px" alt="" class="image-8">
+  <div class="full-container w-container"><img src="images/chart6.png" srcset="images/chart6-p-500.png 500w, images/chart6-p-800.png 800w, images/chart6-p-1080.png 1080w, images/chart6-p-1600.png 1600w, images/chart6.png 1964w" sizes="(max-width: 479px) 60vw, (max-width: 767px) 100vw, (max-width: 991px) 728px, 940px" alt="" class="image-15">
     <div class="div-block-13">
       <h1 class="heading-2">Our Approach</h1>
       <div class="text-block">Working through sprints, we tackle any combination of product, branding or hardware &amp; software development projects rapidly and in tandem.</div>
@@ -116,7 +116,8 @@ overflow-y: hidden;
   <div class="section-4">
     <h1 class="heading-2 team">The Team</h1>
     <div class="mobilescroll">
-      <div class="div-block-4"><img src="images/sam.png" width="211" alt="" class="image-4"><img src="images/angelica.png" width="211" alt="" class="image-3"><img src="images/jeremy.png" width="211" alt="" class="image-5"><img src="images/ricky.png" width="211" alt="" class="image-6"><img src="images/chris.png" width="211" alt="" class="image-7"></div>
+      <div class="div-block-4">
+        <div class="div-block-21"></div><img src="images/sam.png" width="211" alt="" class="image-4"><img src="images/angelica.png" width="211" alt="" class="image-3"><img src="images/jeremy.png" width="211" alt="" class="image-5"><img src="images/ricky.png" width="211" alt="" class="image-6"><img src="images/chris.png" width="211" alt="" class="image-7"></div>
     </div>
   </div>
   <div class="section-3">
