--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Jul 31 2019 21:59:48 GMT+0000 (UTC)  -->
+<!--  Last Published: Wed Jul 31 2019 22:02:29 GMT+0000 (UTC)  -->
 <html data-wf-page="5d3a22206e9b23b80805dfbf" data-wf-site="5d2ce53299a69083833af0ab">
 <head>
   <meta charset="utf-8">
@@ -13,8 +13,8 @@
   <link href="css/agency-of-inc.webflow.css" rel="stylesheet" type="text/css">
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="images/fav.png" rel="shortcut icon" type="image/x-icon">
-  <link href="images/Frame5.png" rel="apple-touch-icon">
+  <link href="icons/favicon.png" rel="shortcut icon" type="image/x-icon">
+  <link href="icons/webclip.png" rel="apple-touch-icon">
   <style> 
 .w-slider-dot { background: #EFEFEF; } 
 .w-slider-dot.w-active { background: black; } 
