--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Jul 31 2019 22:02:29 GMT+0000 (UTC)  -->
+<!--  Last Published: Wed Jul 31 2019 22:17:43 GMT+0000 (UTC)  -->
 <html data-wf-page="5d2ce53299a69008e93af0ac" data-wf-site="5d2ce53299a69083833af0ab">
 <head>
   <meta charset="utf-8">
@@ -14,6 +14,14 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="icons/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="icons/webclip.png" rel="apple-touch-icon">
+  <!--  Global site tag (gtag.js) - Google Analytics  -->
+  <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-144981560-1"></script>
+  <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-144981560-1');
+</script>
   <style> 
 .w-slider-dot { background: #EFEFEF; } 
 .w-slider-dot.w-active { background: black; } 
@@ -51,7 +59,7 @@ overflow-y: hidden;
   <div class="full-container multidisciplinary w-container">
     <h2 class="tagline">We&#x27;re a multidisciplinary agency of experts <br>who create cohesive experiences across brand and product.</h2>
   </div>
-  <div class="full-container w-container"><img src="images/chart6.png" srcset="images/chart6-p-500.png 500w, images/chart6-p-800.png 800w, images/chart6-p-1080.png 1080w, images/chart6-p-1600.png 1600w, images/chart6.png 1964w" sizes="(max-width: 479px) 60vw, 100vw" alt="" class="image-15">
+  <div class="full-container w-container"><img src="images/chart6.png" srcset="images/chart6-p-500.png 500w, images/chart6-p-800.png 800w, images/chart6-p-1080.png 1080w, images/chart6-p-1600.png 1600w, images/chart6.png 1964w" sizes="(max-width: 479px) 60vw, (max-width: 767px) 100vw, (max-width: 991px) 728px, 940px" alt="" class="image-15">
     <div class="div-block-13">
       <h1 class="heading-2">Our Approach</h1>
       <div class="text-block">Working through sprints, we tackle any combination of product, branding or hardware &amp; software development projects rapidly and in tandem.</div>
