--- a/work.html
+++ b/work.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Jul 31 2019 22:02:29 GMT+0000 (UTC)  -->
+<!--  Last Published: Wed Jul 31 2019 22:17:43 GMT+0000 (UTC)  -->
 <html data-wf-page="5d39c0a63956d25c53319b50" data-wf-site="5d2ce53299a69083833af0ab">
 <head>
   <meta charset="utf-8">
@@ -14,6 +14,14 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="icons/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="icons/webclip.png" rel="apple-touch-icon">
+  <!--  Global site tag (gtag.js) - Google Analytics  -->
+  <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-144981560-1"></script>
+  <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-144981560-1');
+</script>
   <style> 
 .w-slider-dot { background: #EFEFEF; } 
 .w-slider-dot.w-active { background: black; } 
