fix contact background

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Jul 31 2019 22:17:43 GMT+0000 (UTC)  -->
+<!--  Last Published: Thu Aug 08 2019 20:58:58 GMT+0000 (UTC)  -->
 <html data-wf-page="5d2ce53299a69008e93af0ac" data-wf-site="5d2ce53299a69083833af0ab">
 <head>
   <meta charset="utf-8">
@@ -40,7 +40,7 @@ overflow-y: hidden;
 }
 </style>
 </head>
-<body data-scroll-time="0" class="body">
+<body data-scroll-time="0" class="body taglinebg">
   <div data-collapse="all" data-animation="default" data-duration="250" data-doc-height="1" data-no-scroll="1" class="navbar navbar-2 w-nav"><a href="index.html" class="brand w-nav-brand w--current"><img src="images/Agency-of.logo.svg" alt="" class="image"></a>
     <div data-w-id="86b60b00-aa70-0070-671e-ef5b788155d1" class="menu-button w-nav-button">
       <div class="top-line"></div>
@@ -59,7 +59,7 @@ overflow-y: hidden;
   <div class="full-container multidisciplinary w-container">
     <h2 class="tagline">We&#x27;re a multidisciplinary agency of experts <br>who create cohesive experiences across brand and product.</h2>
   </div>
-  <div class="full-container w-container"><img src="images/chart6.png" srcset="images/chart6-p-500.png 500w, images/chart6-p-800.png 800w, images/chart6-p-1080.png 1080w, images/chart6-p-1600.png 1600w, images/chart6.png 1964w" sizes="(max-width: 479px) 60vw, (max-width: 767px) 100vw, (max-width: 991px) 728px, 940px" alt="" class="image-15">
+  <div class="full-container w-container"><img src="images/chart6.png" srcset="images/chart6-p-500.png 500w, images/chart6-p-800.png 800w, images/chart6-p-1080.png 1080w, images/chart6-p-1600.png 1600w, images/chart6.png 1964w" sizes="(max-width: 479px) 60vw, 100vw" alt="" class="image-15">
     <div class="div-block-13">
       <h1 class="heading-2">Our Approach</h1>
       <div class="text-block">Working through sprints, we tackle any combination of product, branding or hardware &amp; software development projects rapidly and in tandem.</div>
