title said my name

--- a/fitchwork/index.html
+++ b/fitchwork/index.html
@@ -8,11 +8,11 @@
 		
 		<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<meta name="robots" content="index,follow">
-		<title>fitchwork - jeremy cimafonte design.</title>
+		<title>fitchwork - Agency of inc.</title>
 		<meta name="description" content="fitchwork “Products powered by  novel fabrication and software.” Development, UX Fitchwork is a collaborative design studio working across...">
 				<meta name="twitter:card" content="summary_large_image">
 		<meta name="twitter:title" content="fitchwork — jeremy cimafonte design.">
-		<meta name="twitter:description" content="fitchwork “Products powered by  novel fabrication and software.” Development, UX Fitchwork is a collaborative design studio working across...">
+		<meta name="twitter:description" content="fitchwork “Products powered by novel fabrication and software.” Development, UX Fitchwork is a collaborative design studio working across...">
 		<meta name="twitter:image" content="https://freight.cargo.site/w/1200/i/110cb638b0423cf6b40c61c534f2e4b08b45d44404a7f1778110dc336658415e/2w6ywit8_yk-samuel-zeller.jpg">
 		<meta property="og:locale" content="en_US">
 		<meta property="og:title" content="fitchwork — jeremy cimafonte design.">
@@ -171,7 +171,7 @@
 					<div grid-row="" grid-pad="2" grid-gutter="4" grid-responsive="">
 	<div grid-col="x11" grid-pad="2" class=""><b><h1><b>fitchwork</b></h1><br>
 <br>
-<h2>“Products powered by&nbsp; novel fabrication and software.”<br>
+<h2>“Products powered by novel fabrication and software.”<br>
 <small>Development, UX</small></h2></b></div>
 	<div grid-col="x11" grid-pad="2" class="gifimg"><img width="3441" height="2023" width_o="3441" height_o="2023" data-src="https://freight.cargo.site/t/original/i/8b5193311838b88ad8507dc7d74cedb4d178ad6cc0a5dd520d050e00645ce2fc/fitchwork2.png" data-mid="30072844" border="0" class="image-zoom" src="index_files/fitchwork2.png" style="width: 655.429px; height: 385.333px;"><br>
 <br>Fitchwork is a collaborative design studio working across architecture, fashion and product design.&nbsp;<br><br>I worked with the designer over a few months to to bring his vision to life. We created an online shop as well as a ‘shopbot’, for product management and fulfillment.<br><br>
