--- a/riviera/sourcing/index.html
+++ b/riviera/sourcing/index.html
@@ -56,15 +56,7 @@
 <script src="Riviera Partners - jeremy cimafonte design._files/cargo.apicore.package.jquery213.min.js" data-main=""></script>
 <script src="Riviera Partners - jeremy cimafonte design._files/apipackage.min.js" data-main=""></script>
 		<script async="">require(["/_jsapps/backdrop/main.bootstrap.js"]);</script>	<style type="text/css">[draggable=true] {-webkit-user-drag: element; -webkit-user-select: none; -moz-user-select: none;}</style><script type="text/javascript" charset="utf-8" async="" data-requirecontext="_" data-requiremodule="/_jsapps/backdrop/main.bootstrap.js" src="Riviera Partners - jeremy cimafonte design._files/main.bootstrap.js"></script><script type="text/javascript" charset="utf-8" async="" data-requirecontext="_" data-requiremodule="/_jsapps/imagegallery/slideshow/main.js?nocache=19-09-02.1" src="Riviera Partners - jeremy cimafonte design._files/main.js"></script><script type="text/javascript" charset="utf-8" async="" data-requirecontext="_" data-requiremodule="/_jsapps/imagegallery/base.js?nocache=19-01-30" src="Riviera Partners - jeremy cimafonte design._files/base.js"></script><script type="text/javascript" charset="utf-8" async="" data-requirecontext="_" data-requiremodule="text" src="Riviera Partners - jeremy cimafonte design._files/text.min.js"></script><script type="text/javascript" charset="utf-8" async="" data-requirecontext="_" data-requiremodule="/_jsapps/thumbnails/columns/main.js" src="Riviera Partners - jeremy cimafonte design._files/main(1).js"></script></head>
-	<body data-bodyview="" style="" class="" data-page-id="5983743" cz-shortcut-listen="true"><div id="toolset" class="toolset">
-	<div id="toolset_admin">
-		<a href="https://jbcima.cargo.site/Riviera-Partners#" rel="load_admin">
-			<svg id="Layer_1" x="0px" y="0px" viewBox="0 6 30 30" style="enable-background:new 0 6 30 30;">
-			<polygon style="fill:#FFFFFF;enable-background:new;" points="21.2999878,19.5 15.8999939,19.5   18.2000122,11.6000061 9.2999878,22.5 14.7999878,22.5 12.6000061,30.3999939 "></polygon>
-			</svg>
-		</a>
-	</div>
-</div>
+	<body data-bodyview="" style="" class="" data-page-id="5983743" cz-shortcut-listen="true">
 
 
 		
@@ -431,17 +423,7 @@
 }
 	</style>
 	</div><div class="page_container overlay fixed exclude_mobile pointer-events-none" local-style="3634567" style="bottom: 0px; z-index: 5;">
-	<div class="page container container_width clearfix" data-container="content" data-id="3634567">
-		<bodycopy class="bodycopy content content_padding">
 
-			
-			<div class="page_content clearfix" data-elementresizer="" data-resize-parent="" data-ce-host="true" data-ce-model-id="3634567">
-				<cargo-link><a href="http://cargocollective.com/" target="_blank" class="cargo_link">Running on Cargo</a></cargo-link>
-			</div>
-
-			
-		</bodycopy>
-	</div>
 	<div class="page_background"></div>
 	<style class="local-css" data-target="3634567">
 		[local-style="3634567"] .container_width {
