--- a/about.html
+++ b/about.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <!--  Last Published: Wed Mar 04 2020 22:51:17 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="5e6021efad635f2530d02a2b" data-wf-site="5e5ee26e3de02ae2e7803b30">
+<html data-wf-page="5e602ef6e7017b077cd9dd3f" data-wf-site="5e5ee26e3de02ae2e7803b30">
 <head>
   <meta charset="utf-8">
-  <title>Work</title>
-  <meta content="Work" property="og:title">
+  <title>About</title>
+  <meta content="About" property="og:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/components.css" rel="stylesheet" type="text/css">
@@ -42,7 +42,7 @@ display: none !important;
       <a href="#" class="link-block w-inline-block">
         <h2 class="navigation---heading">About us</h2>
       </a>
-      <a href="work.html" class="link-block w-inline-block w--current">
+      <a href="work.html" class="link-block w-inline-block">
         <h2 class="navigation---heading">Past Clients</h2>
       </a>
       <a href="https://medium.com/agencyof/innovation-sprint-case-study-rivera-partners-14f148b1ae5f" target="_blank" class="link-block w-inline-block">
@@ -69,16 +69,11 @@ display: none !important;
     <div class="introduction two">
       <div class="w-layout-grid grid-5">
         <div>
-          <div class="div-block-9"><img src="https://uploads-ssl.webflow.com/5d43c3a6500bcbf156d18ab2/5d43c3a6500bcb6623d18afe_riviera.svg" alt="" class="image-11"></div>
-          <p class="paragraph-5">Riviera approached us ahead of a growth equity round. We reimagined the Sutro app design, building it into a world class recruiting platform that combines workflow automation and AI to empower recruiters and provide transparency for candidates.</p>
-        </div>
-        <div>
-          <div class="div-block-9"><img src="images/rocean.png" width="130" alt="" class="image-11"></div>
-          <p class="paragraph-5">We developed early prototypes and are currently working with the team to launch <a href="https://thespoon.tech/rocean-raises-6m-for-its-countertop-carbonated-water-dispenser/" target="_blank" class="link-6">the first version of rOcean</a> - a single device that filters, flavors and carbonates water directly from your tap to create all of your favorite drinks.</p>
-        </div>
-        <div>
-          <div class="div-block-9"><img src="https://uploads-ssl.webflow.com/5d43c3a6500bcbf156d18ab2/5d43c3a6500bcb289bd18afd_complex.svg" alt="" class="image-11"></div>
-          <p class="paragraph-5">Working with Complex&#x27;s Ad Partners, we created and launched various interactive experiences such as McDonalds Flavorbattle as well as various experimental ad experiences for clients like Nike, Sony, Miller lite.</p>
+          <p class="paragraph-5">Why does working with an agency have to be a black box? <br>We believe in thinking about time and outputs, you shouldn’t pay for what you don’t need.</p>
+          <div class="div-block-71">
+            <div class="text-block-4">Agency of is the multidisciplinary practice of Jeremy Cimafonte and collaborators.</div>
+            <div class="div-block-70"><a href="https://www.linkedin.com/company/agencyof/" class="w-inline-block"><img src="images/li.svg" alt=""></a><a href="https://www.instagram.com/agency_of/" class="link-block-6 w-inline-block"><img src="images/insta.svg" alt="" class="image-12"></a><a href="#" class="w-inline-block"><img src="images/twit.svg" alt=""></a></div>
+          </div>
         </div>
       </div>
     </div>
