--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Wed Mar 04 2020 22:51:17 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Mar 04 2020 22:52:55 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5e5ff499b66e5b7e766fdda3" data-wf-site="5e5ee26e3de02ae2e7803b30">
 <head>
   <meta charset="utf-8">
@@ -38,7 +38,7 @@ display: none !important;
   </div>
   <div class="navigation">
     <div class="div-block-48">
-      <a href="#" class="link-block w-inline-block">
+      <a href="about.html" class="link-block w-inline-block">
         <h2 class="navigation---heading">About us</h2>
       </a>
       <a href="work.html" class="link-block w-inline-block">
