--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Wed Mar 04 2020 22:51:17 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Mar 04 2020 22:52:55 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5e602ef6e7017b077cd9dd3f" data-wf-site="5e5ee26e3de02ae2e7803b30">
 <head>
   <meta charset="utf-8">
@@ -39,7 +39,7 @@ display: none !important;
   <div class="navigation">
     <div class="div-block-55"></div>
     <div class="div-block-48">
-      <a href="#" class="link-block w-inline-block">
+      <a href="about.html" class="link-block w-inline-block w--current">
         <h2 class="navigation---heading">About us</h2>
       </a>
       <a href="work.html" class="link-block w-inline-block">
