--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Wed Mar 04 2020 22:55:36 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Mar 04 2020 22:58:40 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5e602ef6e7017b077cd9dd3f" data-wf-site="5e5ee26e3de02ae2e7803b30">
 <head>
   <meta charset="utf-8">
@@ -67,9 +67,9 @@ display: none !important;
   <div class="div-block-67"></div>
   <div class="div-block-62">
     <div class="introduction two">
-      <div class="w-layout-grid grid-5">
+      <div class="w-layout-grid grid-6">
         <div>
-          <p class="paragraph-5">Why does working with an agency have to be a black box? <br>We believe in thinking about time and outputs, you shouldn’t pay for what you don’t need.</p>
+          <p class="paragraph-5 grid6">Why does working with an agency have to be a black box? We believe in thinking about time and outputs, you shouldn’t pay for what you don’t need.</p>
           <div class="div-block-71">
             <div class="text-block-4">Agency of is the multidisciplinary practice of Jeremy Cimafonte and collaborators.</div>
             <div class="div-block-70"><a href="https://www.linkedin.com/company/agencyof/" class="w-inline-block"><img src="images/li.svg" alt=""></a><a href="https://www.instagram.com/agency_of/" class="link-block-6 w-inline-block"><img src="images/insta.svg" alt="" class="image-12"></a><a href="#" class="w-inline-block"><img src="images/twit.svg" alt=""></a></div>
