updated work copy

--- a/work.html
+++ b/work.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Wed Mar 04 2020 23:09:21 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Mar 05 2020 05:04:43 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5e6021efad635f2530d02a2b" data-wf-site="5e5ee26e3de02ae2e7803b30">
 <head>
   <meta charset="utf-8">
@@ -74,7 +74,7 @@ display: none !important;
         </div>
         <div>
           <div class="div-block-9"><img src="images/rocean.png" width="130" alt="" class="image-11"></div>
-          <p class="paragraph-5">We developed early prototypes and are currently working with the team to launch <a href="https://thespoon.tech/rocean-raises-6m-for-its-countertop-carbonated-water-dispenser/" target="_blank" class="link-6">the first version of rOcean</a> - a single device that filters, flavors and carbonates water directly from your tap to create all of your favorite drinks.</p>
+          <p class="paragraph-5">We helped develop early prototypes and are currently working with the team to launch <a href="https://thespoon.tech/rocean-raises-6m-for-its-countertop-carbonated-water-dispenser/" target="_blank" class="link-6">the Rocean One</a> - a single device that filters, flavors and carbonates water directly from your tap to create all of your favorite drinks.</p>
         </div>
         <div>
           <div class="div-block-9"><img src="https://uploads-ssl.webflow.com/5d43c3a6500bcbf156d18ab2/5d43c3a6500bcb289bd18afd_complex.svg" alt="" class="image-11"></div>
