--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Mon Mar 16 2020 14:43:33 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Mar 16 2020 14:49:35 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5e5ff499b66e5b7e766fdda3" data-wf-site="5e5ee26e3de02ae2e7803b30">
 <head>
   <meta charset="utf-8">
@@ -160,7 +160,7 @@ display: none !important;
                       <h3 class="heading-14 email-box">Enter Email</h3><img src="https://uploads-ssl.webflow.com/5e4453a6607e547d06ac93d7/5e4453a6607e54bcfcac93f8_link.svg" alt="" class="image-5"></div>
                   </div>
                   <div class="form-block w-form">
-                    <form id="wf-form-Email-Form" name="wf-form-Email-Form" data-name="Email Form" action="https://emails.pabbly.com/signups/subscribe/Ijg1MTYwMiI/immediate" method="post" class="form"><input type="email" class="text-field w-input" autofocus="true" maxlength="256" name="subs_email" data-name="subs_email" placeholder="Enter Email" id="subs_email" required=""><input type="submit" value=" " class="submit-button w-button">
+                    <form id="wf-form-Email-Form" name="wf-form-Email-Form" data-name="Email Form" action="https://emails.pabbly.com/signups/subscribe/Ijg1MTYwMiI/immediate" method="post" class="form"><input type="email" class="text-field w-input" maxlength="256" name="subs_email" data-name="subs_email" placeholder="Enter Email" id="subs_email" required=""><input type="submit" value=" " class="submit-button w-button">
                       <div class="w-embed"><input name="subs_set_url" type="hidden" value="http://of.agency/"></div>
                     </form>
                     <div class="success-message-2 w-form-done">
